<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin1"
    android:paddingRight="@dimen/activity_horizontal_margin1"
    android:paddingTop="@dimen/appbar_padding_top1"
    android:clipChildren="false"
    tools:context="com.delanodebronni.debronni.dms.viewContact">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:src="@drawable/house1"
        android:adjustViewBounds="true"
        android:paddingBottom="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

      <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/panel_bg"
        android:orientation="vertical"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblemail"
            android:id="@+id/lblemail"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/email"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/panel_bg"
        android:orientation="vertical"
        android:weightSum="1"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblname"
            android:id="@+id/lblname"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/name"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/panel_bg"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingBottom="10dp"
        android:layout_below="@+id/LinearLayout2"
        android:layout_alignLeft="@+id/LinearLayout5"
        android:layout_alignStart="@+id/LinearLayout5"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lblhnum"
            android:id="@+id/lblhnum"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/hnum"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="40dp"/>
    </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout5"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/panel_bg"
            android:orientation="vertical"
            android:weightSum="1"
            android:paddingBottom="10dp"
            android:layout_below="@+id/LinearLayout4"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lblcnum"
                android:id="@+id/lblcnum"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="7dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/cnum"
                android:layout_below="@+id/textView"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/panel_bg"
            android:orientation="vertical"
            android:weightSum="1"
            android:paddingBottom="10dp"
            android:layout_below="@+id/LinearLayout5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="7dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/lbltype"
                android:id="@+id/lbltype"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="7dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/type"
                android:layout_below="@+id/textView"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabfav"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:backgroundTint="@color/colorAccent"
            android:layout_gravity="end|bottom"
            android:src="@drawable/abc_ic_star_black_36dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabhome"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:srcCompat="@android:drawable/ic_input_add"
            app:backgroundTint="@color/colorAccent"
            android:src="@drawable/house"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="3dp"/>

    </RelativeLayout>
</ScrollView>